Change Log for OpenXava project
===============================

- Icon instead of image for sorting rows in collections with @OrderColumn.
- Icons instead of images for messages.
- Icons instead of images for sort indicators in list and collections.
- Icon instead of image to reset filter values in list and collections.
- Icon instead of image for boolean values in list and collections.
- Icons instead of images for date and date/time editors and list filtering.
- Icon to throw calendar in DateTimeCalendar editor inside textfield.
- Stereotype FILE supports multischema.
- New icon for going to first record in detail mode.
- Icons instead of images for page navigation in lists.
- Material Design Icons upgraded to 1.4.57.
- Icon instead of image for help.
- Icons instead of images for closing and opening frames.
- Icons for customizing list are of the same color (green).
- Icon for showing and hiding filter in list is in the same place.
- Icons instead of images for customizing list and collections.
- Icons instead of images for validation error and required.
- There is no special icon for key, just the required icon if applies.

OpenXava 5.4.1 (2015-12-15)
---------------------------
- Fix: Default action fired pressing ENTER ignores confirm=true and takes-long=true.
- Fix: Searching modules does not work if you do not use exact accents.
- Fix: ClassCastException when an entity used in a CascadeType.REMOVE or ALL collection has a reference to itself.
- Fix: Properties with EMAIL_LIST stereotype are not validated. 
- Fix: After removing a row from an element collection, fails on adding a second additional row to the collection.
- Fix: When creating a new entity with an element collection if we remove a row before saving only saves the first row.
- Fix: View.setFocus() does not work from @OnChange actions.
- Fix: Duplicated format list buttons in Linux/Mac running Tomcat from Eclipse.
- Fix: Legend in charts is not translated.